force-app/main/default/objects/BMCServiceDesk__BMC_BaseRelationship__c/BMCServiceDesk__BMC_BaseRelationship__c.object-meta.xml
<CustomObject>
    <description>BMC_BaseRelationship. CMDB Relationship class that is a common base class (located at the top of the inheritance tree) for the relationship classes in the CDM. Though you are unlikely to create any instances of this class, you can use its form as a single place to query for all relationships.  Attributes of this class are inherited by all relationship classes. In addition to attributes (such as Name) that you populate for all relationships, BMC_BaseRelationship also contains core attributes (such as InstanceId, ReconciliationIdentity, and ClassId) that are populated automatically by the CMDB, and CreateDate, populated automatically by the application.  Use the Name attribute of BMC_BaseRelationship to further categorize relationships according to the Relationship Normalization Table found in  CMDB Common Data Model documentation.  For configuration item (CI) classes, the CDM common base class is BMC_BaseElement.  This class has no corresponding DMTF CIM class</description>
    <label>Base Relationship</label>
    <nameField>
        <label>BMC_BaseRelationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Base Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>