force-app/main/default/objects/BMCServiceDesk__BMC_BaseRelationship__c/fields/BMCServiceDesk__AccountID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__AccountID__c</fullName>
    <label>AccountID</label>
    <length>254</length>
    <type>Text</type>
</CustomField>