force-app/main/default/objects/BMCServiceDesk__BMC_BaseRelationship__c/fields/BMCServiceDesk__AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__AssignedTo__c</fullName>
    <label>AssignedTo</label>
    <length>254</length>
    <type>Text</type>
</CustomField>