force-app/main/default/objects/BMCServiceDesk__BMC_BaseRelationship__c/fields/BMCServiceDesk__Atrium_ImpactDirection__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Atrium_ImpactDirection__c</fullName>
    <label>Atrium Impact Direction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Source-Destination</fullName>
            </value>
            <value>
                <fullName>Destination-Source</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>