force-app/main/default/objects/BMCServiceDesk__BMC_BaseRelationship__c/fields/BMCServiceDesk__AttributeDataSourceList__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__AttributeDataSourceList__c</fullName>
    <label>AttributeDataSourceList</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>