force-app/main/default/objects/BMCServiceDesk__BMC_BaseRelationship__c/fields/BMCServiceDesk__CMDBRowLevelSecurity__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__CMDBRowLevelSecurity__c</fullName>
    <label>CMDBRowLevelSecurity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>