force-app/main/default/objects/BMCServiceDesk__BMC_BaseRelationship__c/fields/BMCServiceDesk__CMDBWriteSecurity__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__CMDBWriteSecurity__c</fullName>
    <label>CMDBWriteSecurity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>