force-app/main/default/objects/BMCServiceDesk__BMC_BaseRelationship__c/fields/BMCServiceDesk__Destination__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination</label>
    <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
    <relationshipLabel>BMC_BaseRelationships (Destination)</relationshipLabel>
    <relationshipName>BMC_BaseRelationships1</relationshipName>
    <type>Lookup</type>
</CustomField>