force-app/main/default/objects/BMCServiceDesk__BMC_BaseRelationship__c/fields/BMCServiceDesk__Destination_ClassId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Destination_ClassId__c</fullName>
    <formula>BMCServiceDesk__Destination__r.BMCServiceDesk__ClassID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination.ClassId</label>
    <type>Text</type>
</CustomField>