force-app/main/default/objects/BMCServiceDesk__BMC_BaseRelationship__c/fields/BMCServiceDesk__Destination_DatasetId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Destination_DatasetId__c</fullName>
    <formula>BMCServiceDesk__Destination__r.BMCServiceDesk__DatasetId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination.DatasetId</label>
    <type>Text</type>
</CustomField>