force-app/main/default/objects/BMCServiceDesk__BMC_BaseRelationship__c/fields/BMCServiceDesk__Destination_ReconciliationIdentity__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Destination_ReconciliationIdentity__c</fullName>
    <formula>BMCServiceDesk__Destination__r.BMCServiceDesk__ReconciliationIdentity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination.ReconciliationIdentity</label>
    <type>Text</type>
</CustomField>