force-app/main/default/objects/BMCServiceDesk__BMC_BaseRelationship__c/fields/BMCServiceDesk__ImpactDirection__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ImpactDirection__c</fullName>
    <inlineHelpText>From the list of options, select the impact direction of the relationship.</inlineHelpText>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account On System</fullName>
            </value>
            <value>
                <fullName>All Related</fullName>
            </value>
            <value>
                <fullName>Application System Services</fullName>
            </value>
            <value>
                <fullName>Base Relationship</fullName>
            </value>
            <value>
                <fullName>Component</fullName>
            </value>
            <value>
                <fullName>Contract Component</fullName>
            </value>
            <value>
                <fullName>Dependency</fullName>
            </value>
            <value>
                <fullName>Destination-Source</fullName>
            </value>
            <value>
                <fullName>Element Location</fullName>
            </value>
            <value>
                <fullName>Genealogy</fullName>
            </value>
            <value>
                <fullName>Has Impact</fullName>
            </value>
            <value>
                <fullName>Hosted Access Point</fullName>
            </value>
            <value>
                <fullName>Hosted Service</fullName>
            </value>
            <value>
                <fullName>Hosted System Components</fullName>
            </value>
            <value>
                <fullName>In IP Subnet</fullName>
            </value>
            <value>
                <fullName>In Segment</fullName>
            </value>
            <value>
                <fullName>IP Subnets In Collection</fullName>
            </value>
            <value>
                <fullName>LNs In Collection</fullName>
            </value>
            <value>
                <fullName>Member of Collection</fullName>
            </value>
            <value>
                <fullName>Offering Measured By</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Segments In Collection</fullName>
            </value>
            <value>
                <fullName>Service-Offering</fullName>
            </value>
            <value>
                <fullName>Service-Subservice</fullName>
            </value>
            <value>
                <fullName>Setting Of</fullName>
            </value>
            <value>
                <fullName>Source-Destination</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>