force-app/main/default/objects/BMCServiceDesk__BMC_BaseRelationship__c/fields/BMCServiceDesk__ImpactPropagationModel__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ImpactPropagationModel__c</fullName>
    <label>ImpactPropagationModel</label>
    <length>254</length>
    <type>Text</type>
</CustomField>