force-app/main/default/objects/BMCServiceDesk__BMC_BaseRelationship__c/fields/BMCServiceDesk__ImpactWeight__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ImpactWeight__c</fullName>
    <label>ImpactWeight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>