force-app/main/default/objects/BMCServiceDesk__BMC_BaseRelationship__c/fields/BMCServiceDesk__Instance_Role__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Instance_Role__c</fullName>
    <description>This field is for programmatically calculating what role (source / destination) the related instance holds in the relationship w.r.t to concerned CI and can be customized to display in Relationship list view. This fields does not hold any data and shouldn&apos;t be used for any other purposes.</description>
    <label>Instance Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>