force-app/main/default/objects/BMCServiceDesk__BMC_BaseRelationship__c/fields/BMCServiceDesk__MarkAsDeleted__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__MarkAsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this field if you want to mark this relationship as soft deleted.</inlineHelpText>
    <label>Mark As Deleted</label>
    <type>Checkbox</type>
</CustomField>