force-app/main/default/objects/BMCServiceDesk__BMC_BaseRelationship__c/fields/BMCServiceDesk__RF_UniqueCIRelationshipID_CaseSens__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__RF_UniqueCIRelationshipID_CaseSens__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Use this field (case sensitive) to populate unique identifier of Configuration Item Relationships as identified in any source application like BMC Helix Discovery.</description>
    <externalId>true</externalId>
    <label>Unique CI Relationship ID-CaseSens</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>