force-app/main/default/objects/BMCServiceDesk__BMC_BaseRelationship__c/fields/BMCServiceDesk__ShortDescription__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ShortDescription__c</fullName>
    <inlineHelpText>Use this field to enter a description of the relationship. The description should indicate which instance is the source member and which is the destination member of the relationship.</inlineHelpText>
    <label>Description</label>
    <length>254</length>
    <type>Text</type>
</CustomField>