force-app/main/default/objects/BMCServiceDesk__BMC_BaseRelationship__c/fields/BMCServiceDesk__Source_InstanceId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Source_InstanceId__c</fullName>
    <formula>BMCServiceDesk__Source__r.BMCServiceDesk__InstanceID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source.InstanceId</label>
    <type>Text</type>
</CustomField>