force-app/main/default/objects/BMCServiceDesk__BMC_BaseRelationship__c/fields/BMCServiceDesk__Source_InstanceName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Source_InstanceName__c</fullName>
    <formula>BMCServiceDesk__Source__r.BMCServiceDesk__Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source.InstanceName</label>
    <type>Text</type>
</CustomField>