force-app/main/default/objects/BMCServiceDesk__BMC_BaseRelationship__c/fields/BMCServiceDesk__Submitter__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Submitter__c</fullName>
    <formula>CreatedBy.FirstName  + &apos;  &apos; + CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submitter</label>
    <type>Text</type>
</CustomField>