force-app/main/default/objects/BMCServiceDesk__BMC_BaseRelationship__c/fields/BMCServiceDesk__UniqueCIRelationshipID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__UniqueCIRelationshipID__c</fullName>
    <externalId>true</externalId>
    <label>Unique CI Relationship ID</label>
    <length>254</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>