force-app/main/default/objects/BMCServiceDesk__BMC_BaseRelationship__c/fields/BMCServiceDesk__UniqueDestinationCIID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__UniqueDestinationCIID__c</fullName>
    <label>Unique Destination CI ID</label>
    <length>254</length>
    <type>Text</type>
</CustomField>