force-app/main/default/objects/BMCServiceDesk__BMC_BaseRelationship__c/fields/BMCServiceDesk__UniqueSourceCIID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__UniqueSourceCIID__c</fullName>
    <label>Unique Source CI ID</label>
    <length>254</length>
    <type>Text</type>
</CustomField>