force-app/main/default/objects/BMCServiceDesk__BMC_BaseRelationship__c/validationRules/BMCServiceDesk__Restrict_Impact_Direction_update2.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__Restrict_Impact_Direction_update2</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL(PRIORVALUE( BMCServiceDesk__ImpactDirection__c ) , &apos;Service-Subservice&apos;) &amp;&amp; ( !ISPICKVAL(BMCServiceDesk__ImpactDirection__c,&apos;Service-Subservice&apos;) &amp;&amp; !ISPICKVAL(BMCServiceDesk__ImpactDirection__c,&apos;Service-Offering&apos;)))</errorConditionFormula>
    <errorDisplayField>BMCServiceDesk__AccountID__c</errorDisplayField>
    <errorMessage>The selected Impact Direction is not valid. The valid Impact Direction is Service-Subservice for this relationship.</errorMessage>
</ValidationRule>