force-app/main/default/objects/BMCServiceDesk__BMC_BaseRelationship__c/listViews/BMCServiceDesk__All.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All</fullName>
    <columns>BMCServiceDesk__InstanceID__c</columns>
    <columns>BMCServiceDesk__ClassId__c</columns>
    <columns>BMCServiceDesk__Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>